<resources>
    <string name="app_name">nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_message">Please sign in to continue</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_question">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_message">Please sign up to get started</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="full_name">FULL NAME</string>
    <string name="sign_up_question">Already have an account?</string>
    <string name="text_user">User</string>
    <string name="error_text">Don\'t let text empty</string>
    <string name="error_pass">Password mismatch</string>
    <string name="error_sign_up">Sign up failed</string>
    <string name="forgot_message">Please enter your email below. <br /> We will send you a message <br /> to reset your password</string>
    <string name="send_email">Send Email</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="jean_doe">Jean Doe</string>
    <string name="email_dummy">jeandoe@email.com</string>
    <string name="preferences">Preferences</string>
    <string name="imagebutton">ImageButton</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="language">Language</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="privacy_and_settings">Privacy and Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="imageview">ImageView</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="votes">Votes</string>
    <string name="overview">Overview</string>
    <string name="genres">Genres</string>
    <string name="main_message">Explore movies to watch!</string>
    <string name="search">Search ...</string>
    <string name="cast">Cast</string>
    <string name="watch_now">Watch Now</string>
</resources>