<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_16dp"
    android:layout_marginEnd="@dimen/_16dp"
    android:layout_marginBottom="@dimen/_16dp"
    android:background="@color/main_background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_movie"
        android:layout_width="@dimen/_130dp"
        android:layout_height="@dimen/_190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/iv_item_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/imageview"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_image" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_item"
        android:layout_width="@dimen/_235dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/movie_title"
        android:textColor="@color/main"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cv_item_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cv_item_movie"
        app:layout_constraintTop_toTopOf="@+id/cv_item_movie"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_release_date_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/release_date"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_item" />

    <ImageView
        android:id="@+id/iv_vote_item"
        android:layout_width="@dimen/_20dp"
        android:layout_height="@dimen/_20dp"
        android:layout_marginStart="@dimen/_10dp"
        android:contentDescription="@string/imageview"
        app:layout_constraintBottom_toBottomOf="@+id/tv_release_date_item"
        app:layout_constraintStart_toEndOf="@+id/tv_release_date_item"
        app:layout_constraintTop_toTopOf="@+id/tv_release_date_item"
        app:srcCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/tv_vote_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5dp"
        android:text="@string/votes"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_vote_item"
        app:layout_constraintStart_toEndOf="@+id/iv_vote_item"
        app:layout_constraintTop_toTopOf="@+id/iv_vote_item" />

    <TextView
        android:id="@+id/tv_overview_item"
        android:layout_width="@dimen/_235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/overview"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_release_date_item" />

    <TextView
        android:id="@+id/tv_genre_item"
        android:layout_width="@dimen/_235dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/genres"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_overview_item" />

</androidx.constraintlayout.widget.ConstraintLayout>