<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_background">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_30dp"
            android:clickable="true"
            android:contentDescription="@string/floatingactionbutton"
            android:focusable="true"
            app:fabCustomSize="@dimen/_50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="@dimen/_24dp"
            app:srcCompat="@drawable/ic_arrow_back" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_backdrop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_350dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_20dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fab_detail">

            <ImageView
                android:id="@+id/iv_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageview"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster"
            android:layout_width="@dimen/_140dp"
            android:layout_height="@dimen/_205dp"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_275dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:layout_constraintStart_toStartOf="@+id/cv_backdrop"
            app:layout_constraintTop_toTopOf="@+id/cv_backdrop">

            <ImageView
                android:id="@+id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/imageview"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_275dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:clickable="true"
            android:contentDescription="@string/floatingactionbutton"
            android:focusable="true"
            app:fabCustomSize="@dimen/_60dp"
            app:layout_constraintEnd_toEndOf="@+id/cv_backdrop"
            app:layout_constraintTop_toTopOf="@+id/cv_backdrop"
            app:maxImageSize="@dimen/_40dp"
            app:srcCompat="@drawable/ic_play" />

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:maxLines="2"
            android:text="@string/movie_title"
            android:textColor="@color/white"
            android:textSize="@dimen/_24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/cv_backdrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cv_poster"
            app:layout_constraintTop_toBottomOf="@+id/cv_backdrop" />

        <TextView
            android:id="@+id/tv_release_date_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/release_date"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail" />

        <ImageView
            android:id="@+id/iv_vote_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:contentDescription="@string/imageview"
            app:layout_constraintBottom_toBottomOf="@+id/tv_release_date_detail"
            app:layout_constraintStart_toEndOf="@+id/tv_release_date_detail"
            app:layout_constraintTop_toTopOf="@+id/tv_release_date_detail"
            app:srcCompat="@drawable/ic_star" />

        <TextView
            android:id="@+id/tv_vote_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/votes"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vote_detail"
            app:layout_constraintStart_toEndOf="@+id/iv_vote_detail"
            app:layout_constraintTop_toTopOf="@+id/iv_vote_detail" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_poster" />

        <TextView
            android:id="@+id/tv_overview_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:text="@string/overview"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/genres"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail" />

        <TextView
            android:id="@+id/tv_genre_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:text="@string/genres"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

        <TextView
            android:id="@+id/tv_cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_15dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_genre_detail" />

        <TextView
            android:id="@+id/tv_cast_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_30dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cast" />

        <Button
            android:id="@+id/btn_watch_now"
            android:layout_width="@dimen/_150dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_50dp"
            android:background="@drawable/background_button"
            android:text="@string/watch_now"
            android:layout_marginTop="@dimen/_50dp"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_detail"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>